--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ a:hover {
 }
 </style>
 
-
+
+
 </head>
 
 <body>
@@ -140,7 +141,7 @@ a:hover {
 
 
 <h3 align="center">Name:Akshatha P</h3>
-<img src="G:\final photoshoot\241A8308.jpg"alt="akshatha's profile picture" height="250" weight="250">
+<img src="241A8308.jpg"alt="akshatha's profile picture" height="250" weight="250">
 <p></p>
 
 
@@ -160,7 +161,9 @@ a:hover {
   
   
   
-  
+  
+
+
 
 
 
@@ -188,6 +191,7 @@ a:hover {
 <hr>
 <a href="my further details">my further details</a>
 <hr>
-
+
+
 </body>
 </html>
