--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ a:hover {
 
 
 <h3 align="center">Name:Akshatha P</h3>
-<img src="241A8308.jpg" alt="akshatha's profile picture" height="250" weight="250">
+<img src="akshu.jpg" alt="akshatha's profile picture" height="250" weight="250">
 <p></p>
 
 
