--- a/index.html
+++ b/index.html
@@ -134,15 +134,19 @@ a:hover {
        <li class="menuitem" onclick="reStyle(2)">Additional skills
        <li class="menuitem" onclick="reStyle(3)">Personal details
        <li class="menuitem" onclick="noStyles()">Invalid
-     
+     <ul>
 </div>
 </div>
-
+<div id="main">
 
 
 <h3 align="center">Name:Akshatha P</h3>
+	  <table cellspacing="30">
+		  <tr>
+			  <td>
+				  
 <img src="akshu.JPG" alt="akshatha's profile picture" height="250" weight="250">
-<p></p>
+			  </td>
 
 
 
@@ -191,7 +195,7 @@ a:hover {
 <hr>
 <a href="my further details">my further details</a>
 <hr>
-
+		  </div>
 
 </body>
 </html>
