--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ a:hover {
 
 
 <h3 align="center">Name:Akshatha P</h3>
-<img src="akshu.jpg" alt="akshatha's profile picture" height="100" weight="100">
+<img src="akshata.jpg" alt="akshatha's profile picture" height="100" weight="100">
 			 
 
 
