--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ href="style.css"type="text/css">
 <style>/* Stylesheet 1: */
 body {
     font: 100% Lucida Sans, Verdana;
-    margin: 20px;
+    margin: 2px;
     line-height: 50px;
 }
 
@@ -146,7 +146,7 @@ a:hover {
 
 
 
-<p class="main">studying in Siddaganga Institute of Technology.</p>
+<p class="main">I'm studying in Siddaganga Institute of Technology.</p>
 <p class="main">I am a developer with both frontend and backend knowledge</p>
 <h4>Phone no:</h4><p>7760536951</p>
 
