--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ href="style.css"type="text/css">
 <style>/* Stylesheet 1: */
 body {
     font: 100% Lucida Sans, Verdana;
-background-color:#66ff99;
+background-color:#99ffcc;
     margin: 2px;
     line-height: 50px;
 }
