--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ body {
     font: 100% Lucida Sans, Verdana;
     margin: 2px;
     line-height: 50px;
+	background-image:url(image.jpg);
+	background-size:auto;
 }
 
 .container {
