--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     margin: 2px;
     line-height: 50px;
 	background-image:url(image.jpg);
-	background-size:auto;
+	background-size:1500px 1200px;
 }
 
 .container {
@@ -28,8 +28,8 @@ body {
 }
 
 #top {
-    background-color:green;
-    color: #ffffff;
+    background-color:black;
+    color:white;
     padding: 15px;
 }
 
@@ -44,8 +44,8 @@ body {
 }
 
 #sidebar {
-    background-color: green;
-    color: #ffffff;
+    background-color: black;
+    color: white;
     padding: 50px;
     width: 70px;
     bottom: 0;
@@ -56,7 +56,7 @@ body {
 
 #bottom {
     border: 1px solid #d4d4d4;
-    background-color:green;
+    background-color: black;
     text-align: center;
     padding: 10px;
     font-size: 70%;
@@ -70,18 +70,18 @@ body {
 
 .menuitem {
     background-color:white;
-    border: 1px solid #d4d4d4;
+    border: 1px solid white;
     list-style-type: none;
     padding: 2px;
     cursor: pointer;
 }
 
 .menuitem:hover {
-    background-color: #ffffff;
+    background-color: black;
 }
 
 .menuitem:first-child {
-   background-color:#4CAF50;
+   background-color: black;
    color: white;
    font-weight:bold;
 }
