--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 }
 
 a {
-    color: #000000;
+    color: white;
     text-decoration: underline;
 }
 
@@ -141,17 +141,19 @@ a:hover {
 </div>
 <div id="main">
 
-
-<h2 align="center">Name:Akshatha P</h2>
+<table>
+	<tr>
+		<td>
+			<h2 align="center">Name:Akshatha P</h2>
 <img src="akshata.jpg" alt="akshatha's profile picture" height="150" weight="150">
-			 
-
-
-
+		</td>
+	<td>
 <p class="main">I'm studying in Siddaganga Institute of Technology.</p>
 <p class="main">I am a developer with both frontend and backend knowledge</p>
 <h4>Phone no:</h4><p>7760536951</p>
-
+		</td>
+	</tr>
+	</table>
 
  
     <div id="sidebar">
