--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@ a:hover {
 
 
 <h2>Education</h2>
-<p><li>10th cbse marks obtained is 10 cgpa</li></p>
-<p><li>2nd puc marks obtained is 95.2 percent</li></p>
+<p class="main"><li>10th cbse marks obtained is 10 cgpa</li></p>
+<p class="main"><li>2nd puc marks obtained is 95.2 percent</li></p>
 <hr>
 <h2>College and School</h2>
-<p>I studied in Sri chaitanya techno school and done my intermediate at Sarvodaya college and</p>
-<p> later I studied in Siddaganga institute of technology(CSE)</p>
+<p class="main">I studied in Sri chaitanya techno school and done my intermediate at Sarvodaya college and</p>
+<p class="main"> later I studied in Siddaganga institute of technology(CSE)</p>
 <hr>
 
 <h2>Personal details</h2>
