--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ a:hover {
 
  
     <div id="sidebar">
-      <h3>AKSHATHA P</h3>
+      <h3>AKSHATHA</h3>
       <p>CSE</p>
 	<p.class="main">SIT tumkur</p>
     </div>
@@ -173,8 +173,8 @@ a:hover {
 
 
 <h2>Education</h2>
-<p class="main"><li>10th cbse marks obtained is 10 cgpa</li></p>
-<p class="main"><li>2nd puc marks obtained is 95.2 percent</li></p>
+<p class="main">10th cbse marks obtained is 10 cgpa</p>
+<p class="main">2nd puc marks obtained is 95.2 percent</p>
 <hr>
 <h2>College and School</h2>
 <p class="main">I studied in Sri chaitanya techno school and done my intermediate at Sarvodaya college and</p>
@@ -188,9 +188,9 @@ a:hover {
 <hr>
 <h2>Additional skills</h2>
 
-<li>Microsoft Office Suite</li>
-<li>Accuracy and attention to detail</li>
-<li>Time management</li>
+<p class="main">Microsoft Office Suite</p>
+<p class="main">Accuracy and attention to detail</p>
+<p class="main">Time management</p>
 <hr>
 <a href="my further details">my further details</a>
 <hr>
