--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@ a:hover {
 <table>
 	<tr>
 		<td>
-			<h2 align="center">Name:Akshatha P</h2>
-<img src="akshata.jpg" alt="akshatha's profile picture" height="150" weight="150">
+			<h2 align="center"><u>Name:Akshatha P</u></h2>
+<img src="akshata.jpg" alt="akshatha's profile picture" height="250" weight="250">
 		</td>
 	<td>
 <p class="main">I'm studying in Siddaganga Institute of Technology.</p>
 <p class="main">I am a developer with both frontend and backend knowledge</p>
-<h4>Phone no:</h4><p>7760536951</p>
+<p class="main">Phone no:7760536951</p>
 		</td>
 	</tr>
 	</table>
@@ -172,21 +172,21 @@ a:hover {
 
 
 
-<h2>Education</h2>
+	<h2><u>Education</u></h2>
 <p class="main">10th cbse marks obtained is 10 cgpa</p>
 <p class="main">2nd puc marks obtained is 95.2 percent</p>
 <hr>
-<h2>College and School</h2>
+	<h2><u>College and School</u></h2>
 <p class="main">I studied in Sri chaitanya techno school and done my intermediate at Sarvodaya college and</p>
 <p class="main"> later I studied in Siddaganga institute of technology(CSE)</p>
 <hr>
 
-<h2>Personal details</h2>
+	<h2><u>Personal details</u></h2>
 
 <h4>email<a href="mailto:akshatha.prakash9@gmail.com">email link</a></h4>
 <h4>facebook<a href="www.facebook.com\Akshatha Prakash">facebook profile</a></h4>
 <hr>
-<h2>Additional skills</h2>
+	<h2><u>Additional skills</u></h2>
 
 <p class="main">Microsoft Office Suite</p>
 <p class="main">Accuracy and attention to detail</p>
