--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ a:hover {
 </div>
 <div id="main">
 
-<table>
+<table cellspacing="30">
 	<tr>
 		<td>
 			<h2 align="center"><u>Name:Akshatha P</u></h2>
